--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Yuri Godke",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
