Adds Button component

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode development",
     "start": "node server.js",
-    "test": "jest --watch",
-    "coverage": "jest --coverage"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "author": "Yuri Godke",
   "license": "ISC",
