--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Yuri Godke",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
