--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
